--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-/*DESIGNS AND STYLE*/
-*{margin: 0;padding: 0;}
+/* Import Fonts */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Literata&display=swap');
+
+/* Start of Designs */
+
+*{
+  margin: 0;
+  padding: 0;
+}
 body{
     width: 100%;
     height: 100%;
@@ -48,7 +57,7 @@ header h1{
     background: black;
     text-align: center;
     animation: cog 2s infinite;
-	animation-timing-function: linear;
+	  animation-timing-function: linear;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .subHome:hover{transition: all 2s;animation: float 1s infinite;animation-timing-function: linear;}
@@ -127,6 +136,7 @@ header h1{
     color: white;
     letter-spacing: 3px;
     bottom: 0;
+    outline: none;
     position: fixed;
     background: linear-gradient(#f5af19, #f12711);
     font-family: Literata;
@@ -159,17 +169,21 @@ header h1{
 }
 .subOffer1, .subOffer2, .subOffer3{
     cursor: pointer;
-    background: linear-gradient(yellow, #F3F9A7);
+    background: linear-gradient(#fff, yellow);
     width: auto;
     height: 400px;
 }
 .subOffer1:hover, .subOffer2:hover, .subOffer3:hover{
-    transition: all 0.2s;
-    background: linear-gradient(white,yellow);
+    transition: all 0.2s linear;
+    background: linear-gradient(yellow, #fff);
+}
+.rewards, .rewards2, .rewards3{
+  width: 200px;
+  padding-top: 20px;
 }
 .dollarIMG, .dollarIMG2, .dollarIMG3{
     width: 170px;
-    padding-top: 70px;
+    padding-top: 20px;
 }
 .offerIMG, .offerIMG2, .offerIMG3{
     display: none;
@@ -177,25 +191,25 @@ header h1{
 }
 .offerIMG{
     width: 250px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .offerIMG2{
     width: 180px;
-    padding: 80px 0px 20px 0px;
+    padding: 40px 0px 20px 0px;
 }
 .offerIMG3{
     width: 150px;
-    padding: 80px 0px 20px 0px;
+    padding: 40px 0px 20px 0px;
 }
 .modal, .modal2, .modal3{
-  display: none; 
+  display: none;
   position: fixed;
-  z-index: 1; 
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
-  overflow: hidden; 
+  height: 100%;
+  overflow: hidden;
 }
 .modal-content {
   background: linear-gradient(#FDC830, #F37335);
@@ -217,7 +231,7 @@ header h1{
     font-family: Literata;
 }
 .form-group:nth-child(2){
-    margin-top: 20px;  
+    margin-top: 20px;
 }
 .form-group h2{
     color: white;
@@ -414,7 +428,7 @@ p{
         margin-bottom: 0;
         border-top: none;
         border-bottom-right-radius: 10px;
-        border-bottom-left-radius: 10px;   
+        border-bottom-left-radius: 10px;
     }
     .offer{
         display: block;
